[package]
name = "radish-types"
version = "0.1.0"
authors = ["Dmitry Shatilov <shatilov.diman@gmail.com>"]
license = "AGPL-3.0-or-later"
edition = "2018"
repository = "https://github.com/shatilov-diman/radish"
keywords = ["database", "in-memory", "nosql", "transport"]
categories = ["database-implementations", "algorithms"]
description = """
Types for interact with Radish Database
"""

[badges]
appveyor = { repository = "https://github.com/shatilov-diman/radish", branch = "master", service = "github" }

[dependencies]
serde = { version = "1", features = ["derive"] }

